# etc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
etc/: Cargo.toml
etc-derive/: Cargo.toml
etc-derive/src/: lib.rs
etc/.github/workflows/: rust.yml
etc/src/: error.rs  etc.rs  fs.rs  io.rs  lib.rs  macros.rs  meta.rs  source.rs  support.rs  tree.rs
etc/tests/: all.rs  etc.rs
src/: cmd.rs  etc.rs  fs.rs  lib.rs  meta.rs  tree.rs
tests/: all.rs
