[package]
name = "etc"
version = "0.1.20"
authors = ["clearloop"]
edition = "2021"
description = "It's time to bundle etc for your awesome project!"
repository = "https://github.com/clearloop/etc"
license = "MIT"
documentation = "https://docs.rs/etc"
homepage = "https://github.com/clearloop/etc"
keywords = ["os"]
readme = './README.md'

[dependencies]
serde = { version = "1.0.193", features = [ "derive" ], optional = true }

[features]
default = []
