[package]
name = "etc"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etc-derive = { version = "0.1.0", path = "../etc-derive", optional = true }
dirs = "2.0.2"

[dev-dependencies]
etc-derive = { version = "0.1.0", path = "../etc-derive" }

[features]
default = []
derive = []
