[package]
name = "etc"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "It's time to bundle etc for your awesome project!"
repository = "https://github.com/clearloop/etc"
license = "MIT"
documentation = "https://docs.rs/etc"
homepage = "https://github.com/clearloop/etc"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["os"]
readme = './README.md'

[dependencies]
# etc-derive = { version = "0.1.0", path = "../etc-derive", optional = true }
dirs = { version = "2.0.2", optional = true }

[dev-dependencies]
dirs = "2.0.2"
# etc-derive = { version = "0.1.0", path = "../etc-derive" }

[features]
bonus = []
default = []
derive = []
